--- a/AutoSite.Website/Views/Shared/_AddSitePartial.cshtml
+++ b/AutoSite.Website/Views/Shared/_AddSitePartial.cshtml
@@ -3,7 +3,7 @@
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
 <div class="input-group">
-    <span class="input-group-addon">Add Page: </span>
+    <span class="input-group-addon">Add Site: </span>
     <input asp-for="Name" class="form-control" />
     <span class="input-group-btn">
         <input type="submit" value="Add" class="btn btn-success col-sm" />
