--- a/AutoSite.Website/Views/Sites/Index.cshtml
+++ b/AutoSite.Website/Views/Sites/Index.cshtml
@@ -22,7 +22,7 @@
     <tbody>
 @foreach (var item in Model)
 {
-        <tr>
+        <tr class="@item.ClassItems@item.Id">
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
